# requin_ocaml

./: Dockerfile  README.md  dune-project  requin_ocaml.opam
.github/workflows/: check.yaml  docker-build.yml
dune.lock/: domainslib.pkg  lock.dune
lib/: bitboard.ml  checkmate_test.ml  dune  evaluation.ml  history.ml  killer.ml  material.ml  movegen.ml  position.ml  psqt.ml  score.ml  search.ml  transposition_table.ml  types.ml  uci.ml  utils.ml
test/: dune  test_requin.ml
test/inline/: dune  engine_test.ml
